Bug fix: Menu appears cut off when in front of a black picture

--- a/assets/index.css
+++ b/assets/index.css
@@ -114,7 +114,7 @@ html {
     top: 0;
     right: -10px;
     width: 70px;
-    height: 190px;
+    height: 260px;
     background-color: white;
     z-index: -2;
 }
